# off_parser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: clang.yml  gcc.yml
example/: CMakeLists.txt  benchmark.hpp  formatter.hpp  main.cpp  omitted.hpp  type_mapper.hpp
include/off_parser/: concepts.hpp  parser.hpp
include/off_parser/geometry/: face.hpp  mesh.hpp  vec.hpp  vertex.hpp
